Fix z-index on search and change style for own comments

--- a/pillar-web/src/styles/_comments.sass
+++ b/pillar-web/src/styles/_comments.sass
@@ -80,6 +80,8 @@
 					font:
 						weight: 500
 
+					&.own
+						color: $color-success
 					&.op
 						color: $color-primary-dark
 
@@ -203,9 +205,12 @@
 				&.badge-team
 					border-color: $color-info
 					color: $color-info
-				&.badge-own
+				&.badge-op
 					border-color: $color-primary
 					color: $color-primary
+				&.badge-own
+					border-color: $color-success
+					color: $color-success
 
 			&.is-reply
 				margin-left: 30px
