--- a/pillar-web/src/styles/_search.sass
+++ b/pillar-web/src/styles/_search.sass
@@ -12,7 +12,7 @@ $search-hit-width_list: 48px
 	pointer-events: none
 	visibility: hidden
 	opacity: 0
-	z-index: 15
+	z-index: $z-index-base + 4
 	transition: opacity 150ms ease-in-out
 
 	&.active
