--- a/pillar-web/src/styles/main.sass
+++ b/pillar-web/src/styles/main.sass
@@ -242,7 +242,7 @@ header.navbar-header
 
 
 .navbar-transparent
-	z-index: 16 /* Flowplayer seems to take up to 11, project container is 12 */
+	z-index: $z-index-base + 5 /* Flowplayer seems to take up to 11, project container is 12 */
 	border: none
 	border-width: 0
 	display: flex
